--- a/ticket-service-vxr/build.gradle
+++ b/ticket-service-vxr/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
