--- a/vexere-to-kafka-service/build.gradle
+++ b/vexere-to-kafka-service/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	runtimeOnly 'org.postgresql:postgresql'
 
 	compile fileTree(dir: 'libs', include: '*.jar')
 }
