--- a/vexere-to-kafka-service/src/main/resources/application.properties
+++ b/vexere-to-kafka-service/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 
 server.port = 8083
-spring.datasource.url=jdbc:postgresql
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform= postgres
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/TBS
+spring.datasource.username=postgres
+spring.datasource.password=0102030405
+
+
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.continue-on-error=true
