--- a/vexere-to-kafka-service/build.gradle
+++ b/vexere-to-kafka-service/build.gradle
@@ -14,7 +14,11 @@ repositories {
 
 dependencies {
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
