--- a/vexere-to-kafka-service/build.gradle
+++ b/vexere-to-kafka-service/build.gradle
@@ -24,10 +24,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.kafka:kafka-streams'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
-	runtimeOnly 'org.postgresql:postgresql'
+	compile 'org.springframework.data:spring-data-commons:1.9.1.RELEASE'
 
+	runtimeOnly 'org.postgresql:postgresql'
 	compile fileTree(dir: 'libs', include: '*.jar')
 }
 
