--- a/kafka-to-elasticsearch/build.gradle
+++ b/kafka-to-elasticsearch/build.gradle
@@ -21,25 +21,22 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-    implementation group: 'com.vaadin.external.google', name: 'android-json', version: '0.0.20131108.vaadin1'
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-// https://mvnrepository.com/artifact/com.google.code.gson/gson
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
-//    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.4'
 
-//    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.0.2'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.6.2'
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
-    implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
-    implementation group: 'org.springframework.data', name: 'spring-data-elasticsearch', version: '4.1.5'
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
+    implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3' \
 
-    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.5.1'
+    // https://mvnrepository.com/artifact/org.springframework.data/spring-data-elasticsearch
+	implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.5.1'
+
 
     implementation 'org.apache.kafka:kafka-streams'
     implementation 'org.springframework.kafka:spring-kafka'
